# mousekey

./: .gitignore  Cargo.toml  LICENSE  README.md  mousekey.kbd
src/: config.rs  main.rs
