[package]
name = "mousekey"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.10"
evdev = "0.13.2"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"

# used to panic! the entire program from a thread
[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
